force-app/main/default/objects/Resource_Skill__c/Resource_Skill__c.object-meta.xml
<CustomObject>
    <description>Represents training category, skill set and proficiency details of Resource.</description>
    <label>Resource Skill</label>
    <nameField>
        <displayFormat>ResourceSkill-{0000000}</displayFormat>
        <label>Resource Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>