force-app/main/default/objects/Resource_Skill__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Resource does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Skills</relationshipLabel>
    <relationshipName>Resource_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>