force-app/main/default/objects/Resource_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Skill</description>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Resource Skills</relationshipLabel>
    <relationshipName>Resource_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>