force-app/main/default/objects/Resource_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <formula>Skill__r.Training_Category__c  + &apos;  &apos; + Skill__r.Training_Skill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>