force-app/main/default/objects/Resource_Skill__c/fields/Skill_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Skill_Proficiency__c</fullName>
    <description>Skill proficiency of Resource</description>
    <label>Skill Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>if needed</fullName>
            </value>
            <value>
                <fullName>no experience</fullName>
            </value>
            <value>
                <fullName>primary</fullName>
            </value>
            <value>
                <fullName>secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>