force-app/main/default/objects/Resource_Skill__c/recordTypes/PSA_Resource_Skill.recordType-meta.xml
<RecordType>
    <fullName>PSA_Resource_Skill</fullName>
    <active>true</active>
    <description>PSA resource skill</description>
    <label>PSA Resource Skill</label>
</RecordType>