force-app/main/default/objects/Resource_Skill__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Name__c</columns>
    <columns>Skill_Proficiency__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>